Done Adding Students

--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "Wang_Jonathan"]
 	path = Wang_Jonathan
 	url = https://github.com/jwang9930/Wang_Jonathan
+[submodule "Xu_Chelsea"]
+	path = Xu_Chelsea
+	url = https://github.com/Whitlinger/Xu_Chelsea
