--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "Xu_Chelsea"]
 	path = Xu_Chelsea
 	url = https://github.com/Whitlinger/Xu_Chelsea
+[submodule "Le_Kien"]
+	path = Le_Kien
+	url = https://github.com/imcheesed/Le_Kien
